feat(backend): add integration / default conf and doc about Kafkl in .env and application*.yml, fixed tests